fix: correct permissions retrieval in JwtService